completed portfolio section

--- a/index.html
+++ b/index.html
@@ -80,14 +80,37 @@
                 <img src="./pictures/Group 96.png" alt="">
             </div>
         </div>
-        <!-- holiday sale section starts here -->
+        <!-- portfolio section starts here -->
 
-        <div>
-            <p>WHAT IS FUNCTIONAL</p>
-            <p><span>Holidays</span> Sale 50%</p>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-                molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+        <div class="portfolio-container">
+            <p class="portfolio-title">THE BEST GIFTS</p>
+            <p class="portfolio-head">Our Awesome Portfolio</p>
+            <p class="portfolio-description">
+                Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. 
+            </p>
         </div>
+
+        <div class="portfolio-images-container">
+            <div class="portfolio-first-image">
+                <img src="./pictures/Rectangle 3.png" alt="">
+            </div>
+            <div class="portfolio-second-image">
+                <img src="./pictures/Rectangle 4.png" alt="">
+            </div>
+            <div class="portfolio-third-image">
+                <img src="./pictures/Rectangle 5.png" alt="">
+            </div>
+            <div class="portfolio-fourth-image">
+                <img src="./pictures/Rectangle 6.png" alt="">
+            </div>
+            <div class="portfolio-fifth-image">
+                <img src="./pictures/Rectangle 7.png" alt="">
+            </div>
+            <div class="portfolio-sixth-image">
+                <img src="./pictures/Rectangle 8.png" alt="">
+            </div>
+        </div>
+    
 
     </main>
 
