Finalised some changes

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/acaf180d9e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <!-- banner section starts here -->
+
     <header>
         <div class="banner-container">
             <h4>
@@ -48,8 +50,7 @@
             </h4>
 
             <p class="party-description">
-                Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed
-                sodales risus ut pellentesque vel euismod.
+                Welcome to the New Year party! Let's embrace new beginnings, <br> share laughter, and toast to love, success, and endless possibilities. Cheers!
             </p>
             <p id="btn">Join Now</p>
         </div>
@@ -68,7 +69,7 @@
                 <p class="coming-soon-head">NEW BEST OFFER</p>
                 <p class="coming-soon-title">Coming Soon</p>
                 <p class="coming-soon-description">
-                    Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod.
+                    Celebrate the New Year with joy and <br> excitement!  Wishing you unforgettable <br> moments,  laughter, and success. Cheers <br> to a fantastic year ahead!
                 </p>
             </div>
             <div class="coming-soon-lpart">
@@ -76,7 +77,7 @@
             </div>
             <div class="coming-soon-rpart">
                 <p class="coming-soon-rhead">2024</p>
-                <p class="coming-soon-rdescription">Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
+                <p class="coming-soon-rdescription">New Year cheers! Embrace <br> joy, laughter, and success.<br> Here's to an amazing year! </p>
                 <img src="./pictures/Group 96.png" alt="">
             </div>
         </div>
@@ -86,7 +87,7 @@
             <p class="portfolio-title">THE BEST GIFTS</p>
             <p class="portfolio-head">Our Awesome Portfolio</p>
             <p class="portfolio-description">
-                Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. 
+                Step into the New Year with a heart full of hope  and a spirit ready for adventure.<br> May this year bring you joy, prosperity, and countless beautiful memories. Cheers!
             </p>
         </div>
 
@@ -110,12 +111,42 @@
                 <img src="./pictures/Rectangle 8.png" alt="">
             </div>
         </div>
-    
+
+        <div class="newsletter-container">
+            <img class="newsletter-img" src="./pictures/Group 61.png" alt="">
+            <p class="newsletter-title">Subscribe Newsletter</p>
+            <p class="newsletter-description">Subscribe for exclusive updates and offers. Stay informed  on trends and events.<br> Join our community – be in the know!</p>
+            <div class="newsletter-input">
+                <input placeholder="user@gmail.com" type="text">
+                <button>Subscribe</button>
+            </div>
+        </div>
 
     </main>
 
     <footer>
-
+        <div class="footer-container">
+            <div>
+                <p class="address">44, Big Building Roosevelt Street <br>
+                    Beach Gardens Florida 33410</p>
+            </div>
+            <div>
+                <p class="telephone"> <i class="fa-solid fa-phone-volume"></i> +00 123 584 124</p>
+            <p class="website-address"> <i class="fa-solid fa-globe"></i> www.website.com</p>
+            </div>
+        </div>
+        <hr>
+        <div class="social-icon-container">
+            <img src="./pictures/Facebook.png" alt="">
+            <img src="./pictures/Instagram.png" alt="">
+            <img src="./pictures/Twitter.png" alt="">
+            <img src="./pictures/Linkedin.png" alt="">
+        </div>
+        <hr>
+        <div class="copyright-container">
+            <p><small> 2017, All Rights Reserved &copy </small></p>
+            <p>Unsubscribe</p>
+        </div>
     </footer>
 
 </body>
